--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.15",
+    "@react-email/tailwind": "^0.0.14",
     "@types/node": "20.11.25",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "autoprefixer": "10.4.18",
+    "clsx": "^2.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "framer-motion": "^11.0.8",
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-type-animation": "^3.2.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^0.16.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.6",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
