--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
+    "react-clock": "^4.6.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
