--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-use": "^17.5.0",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.1",
+    "tw-neumorphism": "^0.2.0",
     "typescript": "5.4.2"
   },
   "devDependencies": {
