--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
